# JackAI

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  run.ps1  run.sh
frontend/: .gitignore  package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChannelSelector.tsx  ContextActions.tsx  InputArea.tsx  MessageList.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Scanner.tsx
jackai/: __init__.py  config_loader.py  context.py  interface.py  session.py
jackai/adapters/: __init__.py  base.py  telegram.py  web_widget.py
jackai/api/: __init__.py  app.py  channels.py
jackai/cli/: __init__.py  main.py
jackai/core/: __init__.py  config_loader.py  context.py  interface.py  session.py
jackai/core/adapters/: __init__.py  base.py  telegram.py  web_widget.py
jackai/core/models/: __init__.py  config.py  interface.py  scanner.py
jackai/domain/: __init__.py  entities.py  repositories.py
jackai/infrastructure/: __init__.py  storage.py  tinydb_repositories.py
jackai/models/: __init__.py  config.py  interface.py  scanner.py
jackai/scanner/: __init__.py  adapter_factory.py  identify.py  preset_tests.py  scrape.py  signatures.py  test_context_wipe.py
tests/: conftest.py  test_adapters_base.py  test_adapters_web_widget.py  test_api.py  test_context.py  test_models_config.py  test_models_interface.py  test_models_scanner.py  test_scanner_adapter_factory.py  test_scanner_identify.py  test_scanner_scrape.py  test_scanner_signatures.py  test_scanner_test_context_wipe.py  test_session.py
