[tool.poetry]
name = "jackai"
version = "0.1.0"
description = "PoC tool for testing context-hijacking of publicly exposed AIs (security research)"
authors = []
readme = "README.md"
packages = [{ include = "jackai" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
pydantic-settings = "^2.0"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
playwright = "^1.49"
httpx = "^0.27"
typer = "^0.12"
pyyaml = "^6.0"
tinydb = "^4.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.metadata.api"

[tool.poetry.scripts]
jackai = "jackai.cli.main:app"
